<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sms"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textSize="20sp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputkan_number"
            android:id="@+id/edt"
            android:inputType="number"
            android:layout_marginLeft="20dp"
            android:background="@android:drawable/editbox_background"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_body"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/edtmessage"
        android:maxLength="160"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inputkan_pesan"
        android:lines="5"
        android:inputType="textMultiLine"

        android:layout_marginTop="10dp"
        android:background="@android:drawable/editbox_background"
        android:gravity="top"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sms_intent"
            android:background="@drawable/background"

            android:id="@+id/btnsmsintent"
            android:layout_weight="2"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/btnkirimsms"
            android:background="@drawable/background"

            android:text="@string/kirim_sms"/>

    </LinearLayout>

</LinearLayout>
